--- a/rock-paper-scissors-game/src/index.html
+++ b/rock-paper-scissors-game/src/index.html
@@ -20,8 +20,8 @@
         <button id="start-game">Start Game</button>
         <video id="webcam" autoplay></video>
     </div>
-    <script src="webcam.js"></script>
-    <script src="animation.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="webcam.js"></script>
+    <script type="module" src="animation.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
