--- a/rock-paper-scissors-game/src/index.html
+++ b/rock-paper-scissors-game/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands"></script>
 </head>
 <body>
     <div class="game-container">
@@ -19,6 +20,7 @@
         <div id="result" class="result"></div>
         <button id="start-game">Start Game</button>
         <video id="webcam" autoplay></video>
+        <canvas id="output-canvas"></canvas>
     </div>
     <script type="module" src="webcam.js"></script>
     <script type="module" src="animation.js"></script>
