--- a/rock-paper-scissors-game/src/index.html
+++ b/rock-paper-scissors-game/src/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 </head>
 <body>
     <div class="game-container">
@@ -22,8 +23,8 @@
         <video id="webcam" autoplay></video>
         <canvas id="output-canvas"></canvas>
     </div>
-    <script type="module" src="webcam.js"></script>
-    <script type="module" src="animation.js"></script>
-    <script type="module" src="app.js"></script>
+    <script src="webcam.js"></script>
+    <script src="animation.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
