--- a/rock-paper-scissors-game/src/index.html
+++ b/rock-paper-scissors-game/src/index.html
@@ -23,8 +23,6 @@
         <video id="webcam" autoplay></video>
         <canvas id="output-canvas"></canvas>
     </div>
-    <script src="webcam.js"></script>
-    <script src="animation.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
